kubernetes/apps/anki-sync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anki-sync
  namespace: anki-sync
spec:
  selector:
    app.kubernetes.io/name: anki-sync
  ports:
    - name: http
      port: 8088
      targetPort: http
      protocol: TCP
